changed third div

--- a/homework2.html
+++ b/homework2.html
@@ -8,44 +8,52 @@
 		<div id="firstdiv">
 			<h1>country</h1>
 			<ul>
-				<li>bangladesh</li>
-				<li>india</li>
-				<li>pakistan</li>
-				<li>england</li>
+				
 				<li>unaited states</li>
 
 			</ul>
 		</div>
 		<div id="seconddiv">
 			<h1>capital</h1>
+			<img src="http://cdn.history.com/sites/2/2013/11/Washington-DC-hero-H.jpeg">
 			
 			<ul>
-				<li>dhaka</li>
-				<li>dilli</li>
-				<li>islamabad</li>
-				<li>london</li>
+				
 				<li>washington</li>
 			</ul>
 		</div>
 
 		<div id="thirddiv">
-			<h1></h1>
+			<h1>Citi Bank</h1>
+			<table>
+				<tr>
+					<td>Banking</td>
+				<td>Credit Cards</td>
+				<td>Lending</td>
+				<td>Investing</td>
+				</tr>
+
+			</table>
 			
 
-		</div>	
+			
 			<h6>first time user <button>Register</button></h6>
 			<p>sign on to citi bank</p>
 			<h4>user ID <input></h4>
 			<h4>password<input></h4>
-
-		<div>
-			<h1></h1>
 			<ul>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li>remember my user ID</li>
+			
+			<button>submit</button>
+			<li>forgot user id or password</li>
+
 			</ul>
+		</div>
+
+		<div id="fourthdiv">
+			<h2>Security center</h2>
+			<p>learn more about identity theft,fraud and other cyber threats.</p>
+
 		</div>
 
 
