--- a/homework2.html
+++ b/homework2.html
@@ -29,9 +29,12 @@
 			<table>
 				<tr>
 					<td>Banking</td>
-				<td>Credit Cards</td>
-				<td>Lending</td>
-				<td>Investing</td>
+					<td>Credit Cards</td>
+					<td>Lending</td>
+					<td>Investing</td>
+					<td>Business</td>
+					<td>Rewards and offer</td>
+					<td>Services</td>
 				</tr>
 
 			</table>
